Fix overflow.

--- a/src/app/components/edit-code/edit-code.component.css
+++ b/src/app/components/edit-code/edit-code.component.css
@@ -14,6 +14,7 @@
   transition: 0.5s;
   text-align: center;
   padding-top: 10px;
+  overflow: auto;
 }
 
 #main {
